# quantified_strategies

./: Dockerfile  pyproject.toml
quantified_strategies/: loss.py  main.py  ml_utils.py  plot_utils.py  strategy_utils.py  utils.py
quantified_strategies/asset_allocation/: Value vs Growth Investing.ipynb  utils.py
quantified_strategies/event_trading/flow_share_buy_back/: Flow Traders Share Buy Back.ipynb  utils.py
quantified_strategies/event_trading/russell_rebalance/: Russell Rebalance Strategy.ipynb  available.py
quantified_strategies/event_trading/super_bowl/: Super Bowl.ipynb  activity.py  available.py  utils.py
quantified_strategies/models/: __init__.py  nn_asset_allocator_with_position_management.py
quantified_strategies/overnight_trading/: __init__.py
quantified_strategies/overnight_trading/short_term_reversal/: Short term Reversal.ipynb  activity.py  utils.py
quantified_strategies/scripts/: Current_Portfolio.ipynb  Portfolio.ipynb  basic_pytorch_neural_network_asset_allocator.ipynb  pytorch_neural_network_asset_allocator_with_position_memory-Copy1.ipynb  pytorch_neural_network_asset_allocator_with_position_memory-Copy2.ipynb  pytorch_neural_network_asset_allocator_with_position_memory.ipynb  pytorch_recurrent_neural_network_asset_allocator.ipynb  torch_asset_allocation-Copy1.ipynb  torch_asset_allocation.ipynb
quantified_strategies/seasonal_trading/: __init__.py
quantified_strategies/technical_trading/: __init__.py
quantified_strategies/trigger_trading/: Trigger Trading Model.ipynb  Trigger Trading.ipynb  utils.py
(+49 files in other folders)
